# hello-rust-mysql

./: .dockerignore  Cargo.toml  README.md  Rocket.toml  docker-compose.yml  docker.mk
.devcontainer/: devcontainer.json  docker-compose.yml
docker/mysql/: Dockerfile
docker/mysql/initdb.d/: 00_init.sql
docker/rust/: Dockerfile
migrations/2020-02-18-145239_init/: up.sql
migrations/2020-02-19-060750_create_posts/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
tutorial/: Cargo.toml
