[package]
name = "workspace"
version = "0.1.0"
authors = ["tamakiii <tamakiii@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["databases", "diesel_mysql_pool"] }
